maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:3: error: '(' expected but identifier found.
    if estFaceMur(){
       ^WallFollowerMaze:10: error: illegal start of simple expression
  }
  ^